--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
 # callback_plugins = ./lib:~/.pyenv/versions/infra/lib/python2.7/site-packages/ansible/plugins/callback
-callback_plugins = ./lib
+callback_plugins = ./plugins
