Add function to generate role/tasks/main.yml from role.yml

--- a/samples/roles/test_simple.yml
+++ b/samples/roles/test_simple.yml
@@ -1,2 +1,3 @@
 tasks:
-  - debug: msg="here we are in the role, foo={{foo}}"
+  - name: debugging
+    debug: msg="here we are in the role, foo={{foo}}"
